# setr_a4

./: CMakeLists.txt  prj.conf
board/: CMakeLists.txt
board/src/: CMakeLists.txt  adc.c  adc.h  co2_levels.c  co2_levels.h  common.h  humidity.c  humidity.h  leds.h  temperature.c  temperature.h
src/: main.c
src/UART/: UART.c  UART.h
src/command_processor/: command_processor.c  command_processor.h
src/sensors/: adc.c  adc.h  buttons.c  buttons.h  commons.h  leds.c  leds.h  rtdb.c  rtdb.h
uart/: CMakeLists.txt  UART.c  UART.h
